--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@
 .heading-title h1{
     font-size: 30px;
     color: rgb(253, 92, 33);
+    background-color: black;
+    padding: 15px;
+    border-radius: 20px;
     text-decoration: underline;
 }
 
